2007-06-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/switch.py (Switch.cb,
	  AVSwitch.do_check, AVSwitch.checkConfig,
	  AVSwitch.get_pipeline_string):
	* flumotion/component/combiners/switch/switch.xml:
	Add caps properties to the audio video switchers so that
	they force both master and backup streams going into the
	switch elements to be of same caps.

2007-06-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/videotest/videotest.py
	  (VideoTest.get_pipeline_string):
	* flumotion/component/producers/videotest/videotest.xml:
	Force the src caps to have a pixel-aspect-ratio.
	This is needed for any downstream component that wants
	to videoscale to pixel aspect ratio 1/1. It is a workaround
	for a GStreamer bug in videoscale that currently has no
	resolution date.

2007-06-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py
	(Vishnu.loadComponentConfigurationXML): Add a message to the
	planet state if the config XML fails to parse. Fixes #578.

	* conf/managers/default/flows/porter.xml: Fix up for The Great
	Renaming.

2007-06-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/combiners/switch/admin_gtk.py
	  (SwitchingNode.stateSet):
	Pass the actual signal id not the dict :)

2007-06-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/componentview.py (NodeBook.__init__): Avoid
	calling show_all in a way that would unconditionally show
	admin/gtk contents. Fixes #575, I think, although that bug was
	filed when the code was significantly different.

	* flumotion/test/test_manager_manager.py: Import common, so that
	we set up logging &c.
	(FakeWorkerMind.waitForComponentsCreate): New method, keeps track
	of the deferreds returned from _loginComponent, so that later one
	can wait for them all to be given avatars.
	(TestVishnu._requestAvatar.got_result): Don't call
	reactor.iterate. Fixes #569.