@@ -200,6 +200,7 @@ flumotion/component/producers/ivtv/Makefile
 flumotion/component/producers/pipeline/Makefile
 flumotion/component/producers/playlist/Makefile
 flumotion/component/producers/rtsp/Makefile
+flumotion/component/producers/screencast/Makefile
 flumotion/component/producers/soundcard/Makefile
 flumotion/component/producers/videotest/Makefile
 flumotion/component/producers/webcam/Makefile
