@@ -1,0 +1,10 @@
+include $(top_srcdir)/common/python.mk
+
+componentdir = $(libdir)/flumotion/python/flumotion/component/producers/screencast
+component_PYTHON = __init__.py screencast.py
+component_DATA = screencast.xml
+
+clean-local:
+	rm -rf *.pyc *.pyo
+
+EXTRA_DIST = $(component_DATA)
